tests/lean/crash.lean.expected.out
crash.lean:8:12: error: type mismatch at application
  have H' : not P, from H,
  ?M_1
term
  H
has type
  P
but is expected to have type
  not P
